Update email address

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Atomic Silicon
-email: atomicsilicon@gmail.com
+email: atomicsilicon@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Atomic Silicon is about ideas, thoughts and musings. Ideas that lead to reflection and realizations.
   It's also a space to look at the world with curiosity, in reflection, and in contemplation.
