--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ github_username:
 theme: minima
 plugins:
   - jekyll-feed
+disqus:
+  shortname: atomicsilicon
 
 # Exclude from processing.
 # The following items will not be processed, by default.
